Added serialVersionUID to MetaMorpheusParameters. Updated kryo to version 5.2.0. Updated junit to version 4.13.2. Updated servlet-api to version 2.5, and added jaxb-api version 2.3.1. Updated commons-io to version 2.11.0. Updated xpp3 to version 1.1.6. Updated xercesImpl to version 2.12.1. Updated jakarta.xml.bind-api to version 3.0.1. Updated commons-net to version 3.8.0. Replaced commons-lang3 with commons-text version 1.9 Updated poi to version 5.0.0. Updated gson to version 2.8.7. Moved project to version 5.0.27.